# todo

./: .gitignore  CLAUDE.md  KUBERNETES_DEPLOYMENT.md  MIGRATION_CHECKLIST.md  PLAN_FASTAPI.md  PLAN_FASTIFY.md  PLAN_REFACTOR_PYTHON.md  PLAN_TODO_PAGE.md  PLAN_TODO_TYPES.md  README.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.json
.github/workflows/: backend-ci.yml  coverage-report.yml  frontend-ci.yml
apps/backend/: .dockerignore  .env.example  Dockerfile  eslint.config.mjs  (+4 more)
apps/backend-fastify/: eslint.config.mjs  package.json
apps/backend-python/: Dockerfile  README.md  package.json  pyproject.toml  requirements.txt  test_live_integration.py
apps/backend-python/app/: __init__.py  main.py
apps/backend-python/app/api/v1/: auth.py  todos.py  user_settings.py  users.py
apps/backend-python/app/core/: config.py  dependencies.py  security.py
apps/backend-python/app/models/: base.py  category.py  todo.py  user.py  user_settings.py
apps/backend-python/app/repositories/: base_redis.py  category_repository.py  todo_repository.py  user_repository.py  user_scoped_redis.py  user_settings_repository.py
apps/backend-python/app/schemas/: auth.py  category.py  todo.py  user.py  user_settings.py
apps/backend-python/app/services/: __init__.py  auth_service.py  todo_service.py  user_service.py  user_settings_service.py
apps/backend-python/app/tests/: conftest.py  test_api_auth.py  test_api_todos.py  test_api_user_settings.py  test_api_users.py  test_core.py  test_e2e_final.py  test_e2e_simple.py  test_integration.py  test_main.py  test_models.py  test_repositories.py
docs/: Integration_Test_Report.md  PostgreSQL_Setup.md
helm-chart/: Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
init-db/: 01-init.sql
z_plans/: codebase-analysis-and-optimization.md  custom-calendar-implementation.md  daily-view-enhancement.md  frontend-structure-improvement.md  settings-page-details.md  todo-categories-implementation.md  todo-json-editor-implementation.md  todo-settings-page-implementation.md  user-api-implementation.md  user-authentication-implementation.md
(+451 files in other folders)
